# chrome-dino-clone

./: README.md  game.wasm  index.html
assets/: index-7jHbc1jH.js  index-CqP2ikPu.css
fronted/: index.html  package-lock.json  package.json  vite.config.ts
fronted/public/: game.js
fronted/src/: App.vue
fronted/src/components/: GameCanvas.vue
fronted/src/core/: constants.ts
fronted/src/stores/: gameStore.ts
fronted/src/wasm/: gameBridge.ts
game-core/: CMakeLists.txt
game-core/include/: CollisionSystem.hpp  Dino.hpp  GameBridge.hpp  GameEngine.hpp  GameState.hpp  ObstacleManager.hpp  ScoreManager.hpp  constants.hpp
game-core/src/: CollisionSystem.cpp  Dino.cpp  GameBridge.cpp  GameEngine.cpp  GameState.cpp  ObstacleManager.cpp  ScoreManager.cpp  constants.cpp
